prevent body scroll when sp-menu is shown & remove whitespace nowrap from example sentence & change example sentence

--- a/src/content/themes/tensaku/assets/css/campaign/campaign.css
+++ b/src/content/themes/tensaku/assets/css/campaign/campaign.css
@@ -174,7 +174,6 @@ body {
     font-size: 12px;
     line-height: 14px;
     font-family: 'Noto Sans JP', sans-serif;
-    white-space: nowrap;
 }
 
 .campaign-feedback-sample-card-sentence-correct-highlight {
